# LangChain-ChatChat-Refactor

./: README.md  pyproject.toml
chatchat/: utils.py
chatchat/settings/: settings.py  settings_manager.py  settings_utils.py
chatchat/web/: api_client.py  dialogue.py  openai_client.py  utils.py  webui.py
chatchat_data/: basic_settings.yaml  kb_settings.yaml  model_settings.yaml  prompt_settings.yaml  tool_settings.yaml
langchain_chatchat/: __init__.py
